--- a/FedEx-Logistics-Performance-and-Cost-Optimization-EDA.ipynb
+++ b/FedEx-Logistics-Performance-and-Cost-Optimization-EDA.ipynb
@@ -382,6 +382,7 @@
         "print(\"\\nFirst 5 Rows (Head):\")\n",
         "print(df.head())\n",
         "\n",
+        "# Dataset Last 5 rows\n",
         "print(\"\\nLast 5 Rows (Tail):\")\n",
         "print(df.tail())"
       ],
@@ -499,20 +500,35 @@
       "source": [
         "# Visualizing the missing values\n",
         "# Calculate missing value counts\n",
+        "\n",
+        "#Tchecks every column in the dataset and counts how many missing (NaN) values are present in each column.\n",
         "missing_counts = df.isnull().sum()\n",
-        "missing_counts = missing_counts[missing_counts > 0]   # keep only columns with missing values\n",
+        "\n",
+        "#This line keeps only those columns where missing values are greater than zero.So columns with no missing values are removed from the result.\n",
+        "missing_counts = missing_counts[missing_counts > 0]\n",
         "\n",
         "# Plot\n",
-        "plt.figure(figsize=(12, 6))\n",
+        "plt.figure(figsize=(12, 6)) # sets the size of the chart so that column names are clearly visible.\n",
         "sns.barplot(x=missing_counts.index, y=missing_counts.values)\n",
         "plt.title(\"Missing Values per Column\")\n",
         "plt.xlabel(\"Columns\")\n",
         "plt.ylabel(\"Count of Missing Values\")\n",
-        "plt.tight_layout()\n",
+        "plt.tight_layout() # Adjusts spacing automatically so labels don’t overlap.\n",
         "plt.show()"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(missing_counts.values)"
+      ],
+      "metadata": {
+        "id": "9QiVSB21ISAb"
       },
       "execution_count": null,
       "outputs": []
@@ -759,7 +775,7 @@
         "\n",
         "df.columns = (\n",
         "    df.columns\n",
-        "      .str.strip() #removing leading and trailing spaces\n",
+        "      .str.strip() #removing leading and trailing spaces from column names\n",
         "      .str.lower() #coverting column names into lower case\n",
         "      .str.replace(\" \", \"_\") #replacing space with underscore\n",
         "      .str.replace(\"-\", \"_\") #replacing hypen with underscore\n",
@@ -777,10 +793,10 @@
       "cell_type": "code",
       "source": [
         "# 2. Strip spaces from string columns\n",
-        "str_cols = df.select_dtypes(include='object').columns\n",
-        "df[str_cols] = df[str_cols].apply(lambda col: col.str.strip())\n",
+        "str_cols = df.select_dtypes(include='object').columns  #selects all columns that contain text data (strings)\n",
+        "df[str_cols] = df[str_cols].apply(lambda col: col.str.strip()) #This removes extra spaces from the beginning and end of every text value in those columns.\n",
         "\n",
-        "# Convert all string columns to lowercase for consistency\n",
+        "# Convert all string columns values to lowercase for consistency\n",
         "df[str_cols] = df[str_cols].apply(lambda col: col.str.lower())"
       ],
       "metadata": {
@@ -810,6 +826,27 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Explation Of Handling Missing Values"
+      ],
+      "metadata": {
+        "id": "KjbKB75qOXPf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I used business logic to fill missing values instead of blindly deleting data. For shipment mode I used ‘Unknown’ because guessing would be incorrect. Dosage was filled with ‘Not Available’ since it does not impact delivery. Insurance was filled with 0 because missing insurance usually means no insurance was applied. Other methods like mean imputation or dropping rows were avoided because they would distort logistics insights.\n",
+        "\n",
+        "\n",
+        "“Dosage is a medical characteristic of the product, but our project focuses on logistics performance. Delivery delay and freight cost depend on weight, distance, shipment mode and vendor responsibility, not on chemical strength of medicine. Therefore, missing dosage does not affect our delivery performance analysis.”"
+      ],
+      "metadata": {
+        "id": "zkkZCVetOfo5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 4. Convert date columns to datetime\n",
@@ -835,7 +872,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Date fields were converted to datetime format using errors='coerce'. This converted invalid or non-date strings into NaN. We intentionally did NOT fill NaN date values because missing delivery dates indicate incomplete documentation or shipments that were not delivered. Filling them artificially would lead to incorrect delivery duration calculations and misleading insights. Therefore, NaN values were preserved for analytical honesty."
+        "“We convert date columns into datetime format so that we can perform date arithmetic such as calculating delivery delay and extracting time-based insights. We use errors='coerce' because real-world datasets contain invalid date values, and this option prevents code failure by converting incorrect dates into NaT instead of breaking the notebook.”"
       ],
       "metadata": {
         "id": "A13XqXtwMMbM"
@@ -976,7 +1013,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Data Manipul**ations Performed\n",
+        "**Data Manipulations Performed**\n",
         "\n",
         "To make the dataset analysis-ready, the following steps were performed:\n",
         "\n",
@@ -1048,10 +1085,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 1 visualization code\n",
-        "# =========================================\n",
         "# Chart 1: Distribution of Shipment Mode\n",
-        "# =========================================\n",
         "\n",
         "plt.figure(figsize=(8,5))\n",
         "ax = sns.countplot(x='shipment_mode', data=df)\n",
@@ -1074,6 +1108,18 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Explain the Visualization\n",
+        "This chart shows the distribution of shipment modes used by FedEx.\n",
+        "We can see that air shipments are the most frequently used with more than six thousand shipments, followed by truck shipments. Ocean and air-charter modes are used very rarely. There are also some shipments marked as unknown which indicates data quality issues.\n",
+        "This means FedEx heavily depends on air transport, which may increase freight cost. Optimizing shipment mode selection can help reduce logistics expenses and improve efficiency."
+      ],
+      "metadata": {
+        "id": "OjHzW9Sj1bFC"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1255,10 +1301,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 3 visualization code\n",
-        "# =========================================\n",
         "# Chart 3: Distribution of Vendor INCO Terms\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    plt.figure(figsize=(10,5))\n",
@@ -1361,10 +1404,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 4 visualization code\n",
-        "# =========================================\n",
         "# Chart 4: Average Delivery Delay by Shipment Mode\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    plt.figure(figsize=(8,5))\n",
@@ -1469,10 +1509,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 5 visualization code\n",
-        "# =========================================\n",
         "# Chart 5: Average Delivery Delay by Country (Top 10)\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    top_countries = (\n",
@@ -2608,6 +2645,75 @@
       ],
       "metadata": {
         "id": "uPQ8RGwHveiV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Remarks for Each Analysis"
+      ],
+      "metadata": {
+        "id": "_rnh0i-0lT0l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| Analysis Type                         | Remark                                                                                                                            |\n",
+        "| ------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------- |\n",
+        "| **Shipment Mode Distribution**        | Air is the most used shipment mode, indicating priority for fast delivery but leading to higher freight cost.                     |\n",
+        "| **Delivery Status Distribution**      | Majority of shipments are delivered on time, but a noticeable number are delayed, requiring process improvement.                  |\n",
+        "| **INCO Term Analysis**                | EXW is the most common INCO term, transferring logistics responsibility to FedEx and increasing freight cost.                     |\n",
+        "| **Delay by Shipment Mode**            | Ocean shipments have the highest average delay, while air and truck shipments are mostly on time or early.                        |\n",
+        "| **Delay by Country**                  | Congo DRC and Togo experience the highest delivery delays, indicating regional bottlenecks.                                       |\n",
+        "| **Weight vs Freight Cost**            | Freight cost increases with shipment weight, confirming cost dependency on shipment size.                                         |\n",
+        "| **Freight Cost by Delivery Status**   | Delayed shipments generally incur higher freight cost, showing inefficiency impact.                                               |\n",
+        "| **Line Item Value vs Insurance Cost** | Insurance cost increases sharply with shipment value, reflecting risk management behavior.                                        |\n",
+        "| **Multivariate Heatmaps**             | Certain combinations of shipment mode and INCO terms lead to extreme delivery delays, indicating risky operational setups.        |\n",
+        "| **Correlation Analysis**              | Delivery delay has weak correlation with numeric variables, meaning delays are driven mainly by operational and regional factors. |\n"
+      ],
+      "metadata": {
+        "id": "MfNTEv1RlV3C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Listing hypothesis/assumptions."
+      ],
+      "metadata": {
+        "id": "DkTF0WeVkZnS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Shipment mode affects delivery performance**\n",
+        "\n",
+        "Shipments transported via ocean or air charter are more likely to be delayed compared to air and truck shipments.\n",
+        "\n",
+        "**Vendor INCO terms influence freight cost**\n",
+        "\n",
+        "Terms like EXW are assumed to increase freight responsibility on FedEx, resulting in higher freight costs.\n",
+        "\n",
+        "**Country impacts delivery delay**\n",
+        "\n",
+        "Certain countries face more delivery delays due to customs, infrastructure, or regulatory challenges.\n",
+        "\n",
+        "**Shipment weight directly affects freight cost**\n",
+        "\n",
+        "Heavier shipments are assumed to incur higher freight charges.\n",
+        "\n",
+        "**High-value shipments have higher insurance cost**\n",
+        "\n",
+        "As line item value increases, insurance cost is also expected to increase.\n",
+        "\n",
+        "**Delivery delays are influenced by operational factors**\n",
+        "\n",
+        "Delivery delays are assumed to depend more on shipment mode, country, and vendor responsibility rather than product dosage or brand"
+      ],
+      "metadata": {
+        "id": "qcdZXgPSkcAa"
       }
     },
     {
