--- a/FedEx-Logistics-Performance-and-Cost-Optimization-EDA.ipynb
+++ b/FedEx-Logistics-Performance-and-Cost-Optimization-EDA.ipynb
@@ -103,15 +103,6 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "I1apcow5dxii"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# **Project Name**    - FedEx Logistics Performance and Cost Optimization Analysis\n",
@@ -134,6 +125,41 @@
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**What is EDA?**\n",
+        "\n",
+        "EDA is the process of understanding a dataset before using it for any prediction or decision making.\n",
+        "\n",
+        "It helps us answer questions like:\n",
+        "\n",
+        "* What does the data contain?\n",
+        "\n",
+        "* Are there missing values or errors?\n",
+        "\n",
+        "* What patterns and trends exist?\n",
+        "\n",
+        "* Which factors affect the business most?\n",
+        "\n",
+        "**Why is EDA important?**\n",
+        "\n",
+        "Before building any model or giving business recommendations, we must understand the data first.\n",
+        "\n",
+        "EDA helps in:\n",
+        "\n",
+        "* Cleaning wrong or missing values\n",
+        "\n",
+        "* Finding relationships between variables\n",
+        "\n",
+        "* Detecting outliers and unusual behavior\n",
+        "\n",
+        "* Generating business insights"
+      ],
+      "metadata": {
+        "id": "r47icJ9D1We6"
       }
     },
     {
@@ -334,8 +360,7 @@
       "source": [
         "# Load Dataset\n",
         "from google.colab import files\n",
-        "upload=files.upload()\n",
-        ""
+        "upload=files.upload()\n"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
@@ -382,7 +407,6 @@
         "print(\"\\nFirst 5 Rows (Head):\")\n",
         "print(df.head())\n",
         "\n",
-        "# Dataset Last 5 rows\n",
         "print(\"\\nLast 5 Rows (Tail):\")\n",
         "print(df.tail())"
       ],
@@ -518,17 +542,6 @@
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(missing_counts.values)"
-      ],
-      "metadata": {
-        "id": "9QiVSB21ISAb"
       },
       "execution_count": null,
       "outputs": []
@@ -775,7 +788,7 @@
         "\n",
         "df.columns = (\n",
         "    df.columns\n",
-        "      .str.strip() #removing leading and trailing spaces from column names\n",
+        "      .str.strip() #removing leading and trailing spaces\n",
         "      .str.lower() #coverting column names into lower case\n",
         "      .str.replace(\" \", \"_\") #replacing space with underscore\n",
         "      .str.replace(\"-\", \"_\") #replacing hypen with underscore\n",
@@ -831,7 +844,7 @@
         "##Explation Of Handling Missing Values"
       ],
       "metadata": {
-        "id": "KjbKB75qOXPf"
+        "id": "crzMVo6pDsab"
       }
     },
     {
@@ -839,11 +852,17 @@
       "source": [
         "I used business logic to fill missing values instead of blindly deleting data. For shipment mode I used ‘Unknown’ because guessing would be incorrect. Dosage was filled with ‘Not Available’ since it does not impact delivery. Insurance was filled with 0 because missing insurance usually means no insurance was applied. Other methods like mean imputation or dropping rows were avoided because they would distort logistics insights.\n",
         "\n",
-        "\n",
-        "“Dosage is a medical characteristic of the product, but our project focuses on logistics performance. Delivery delay and freight cost depend on weight, distance, shipment mode and vendor responsibility, not on chemical strength of medicine. Therefore, missing dosage does not affect our delivery performance analysis.”"
+        "Dosage is a medical characteristic of the product, but our project focuses on logistics performance. Delivery delay and freight cost depend on weight, distance, shipment mode and vendor responsibility, not on chemical strength of medicine. Therefore, missing dosage does not affect our delivery performance analysis."
       ],
       "metadata": {
-        "id": "zkkZCVetOfo5"
+        "id": "vvO-L42jDubx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "0k6e6jWXDsXZ"
       }
     },
     {
@@ -872,7 +891,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "“We convert date columns into datetime format so that we can perform date arithmetic such as calculating delivery delay and extracting time-based insights. We use errors='coerce' because real-world datasets contain invalid date values, and this option prevents code failure by converting incorrect dates into NaT instead of breaking the notebook.”"
+        "Date fields were converted to datetime format using errors='coerce'. This converted invalid or non-date strings into NaN. We intentionally did NOT fill NaN date values because missing delivery dates indicate incomplete documentation or shipments that were not delivered. Filling them artificially would lead to incorrect delivery duration calculations and misleading insights. Therefore, NaN values were preserved for analytical honesty."
       ],
       "metadata": {
         "id": "A13XqXtwMMbM"
@@ -1108,18 +1127,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Explain the Visualization\n",
-        "This chart shows the distribution of shipment modes used by FedEx.\n",
-        "We can see that air shipments are the most frequently used with more than six thousand shipments, followed by truck shipments. Ocean and air-charter modes are used very rarely. There are also some shipments marked as unknown which indicates data quality issues.\n",
-        "This means FedEx heavily depends on air transport, which may increase freight cost. Optimizing shipment mode selection can help reduce logistics expenses and improve efficiency."
-      ],
-      "metadata": {
-        "id": "OjHzW9Sj1bFC"
-      }
     },
     {
       "cell_type": "markdown",
@@ -1618,10 +1625,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 6 visualization code\n",
-        "# =========================================\n",
         "# Chart 6: Weight vs Freight Cost\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    plt.figure(figsize=(8,5))\n",
@@ -1643,7 +1647,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The initial scatter plot looked very dark because many shipments share the same weight and freight cost values, so the points overlap on top of each other. This is known as over-plotting. To solve this, I applied transparency using alpha which helps visualize the true density of data points and makes the relationship between weight and freight cost clearer.”"
+        "The scatter plot looked very dark because many shipments share the same weight and freight cost values, so the points overlap on top of each other. This is known as over-plotting."
       ],
       "metadata": {
         "id": "SjK4FR3KkE2h"
@@ -1722,10 +1726,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 7 visualization code\n",
-        "# =========================================\n",
         "# Chart 7: Shipment Mode vs Delivery Status\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    plt.figure(figsize=(8,5))\n",
@@ -1948,10 +1949,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 9 visualization code\n",
-        "# =========================================\n",
         "# Chart 9: Average Freight Cost by Vendor INCO Term\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    avg_cost_inco = df.groupby('vendor_inco_term')['freight_cost_usd'].mean().reset_index()\n",
@@ -2055,10 +2053,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 10 visualization code\n",
-        "# =========================================\n",
         "# Chart 10: Line Item Value vs Insurance Cost\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    # Convert insurance to numeric if not already done\n",
@@ -2153,10 +2148,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 11 visualization code\n",
-        "# =========================================\n",
         "# Chart 11: Shipment Mode vs INCO Term vs Delivery Delay\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    pivot_table = df.pivot_table(\n",
@@ -2257,10 +2249,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 12 visualization code\n",
-        "# =========================================\n",
         "# Chart 12: Freight Cost by Shipment Mode and Delivery Status\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    plt.figure(figsize=(10,5))\n",
@@ -2354,10 +2343,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 13 visualization code\n",
-        "# =========================================\n",
         "# Chart 13: Delivery Delay by Country and Shipment Mode\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    top_countries = (\n",
@@ -2492,10 +2478,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Correlation Heatmap visualization code\n",
-        "# =========================================\n",
         "# Chart 14: Correlation Heatmap\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    corr_cols = [\n",
@@ -2522,6 +2505,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Heatmap Explation**\n",
+        "\n",
+        "This heatmap helps us identify which factors move together. It clearly shows that insurance cost is driven mainly by item value and quantity, while delivery delays are influenced more by operational or regional factors rather than shipment size or price.”"
+      ],
+      "metadata": {
+        "id": "bzS0PtwosjHZ"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2577,10 +2571,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pair Plot visualization code\n",
-        "# =========================================\n",
         "# Chart 15: Pair Plot Visualization\n",
-        "# =========================================\n",
         "\n",
         "try:\n",
         "    pair_cols = [\n",
@@ -2649,31 +2640,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Remarks for Each Analysis"
-      ],
+      "source": [],
       "metadata": {
-        "id": "_rnh0i-0lT0l"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "| Analysis Type                         | Remark                                                                                                                            |\n",
-        "| ------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------- |\n",
-        "| **Shipment Mode Distribution**        | Air is the most used shipment mode, indicating priority for fast delivery but leading to higher freight cost.                     |\n",
-        "| **Delivery Status Distribution**      | Majority of shipments are delivered on time, but a noticeable number are delayed, requiring process improvement.                  |\n",
-        "| **INCO Term Analysis**                | EXW is the most common INCO term, transferring logistics responsibility to FedEx and increasing freight cost.                     |\n",
-        "| **Delay by Shipment Mode**            | Ocean shipments have the highest average delay, while air and truck shipments are mostly on time or early.                        |\n",
-        "| **Delay by Country**                  | Congo DRC and Togo experience the highest delivery delays, indicating regional bottlenecks.                                       |\n",
-        "| **Weight vs Freight Cost**            | Freight cost increases with shipment weight, confirming cost dependency on shipment size.                                         |\n",
-        "| **Freight Cost by Delivery Status**   | Delayed shipments generally incur higher freight cost, showing inefficiency impact.                                               |\n",
-        "| **Line Item Value vs Insurance Cost** | Insurance cost increases sharply with shipment value, reflecting risk management behavior.                                        |\n",
-        "| **Multivariate Heatmaps**             | Certain combinations of shipment mode and INCO terms lead to extreme delivery delays, indicating risky operational setups.        |\n",
-        "| **Correlation Analysis**              | Delivery delay has weak correlation with numeric variables, meaning delays are driven mainly by operational and regional factors. |\n"
-      ],
-      "metadata": {
-        "id": "MfNTEv1RlV3C"
+        "id": "tIJBXD-1x4jX"
       }
     },
     {
@@ -2682,7 +2651,7 @@
         "##Listing hypothesis/assumptions."
       ],
       "metadata": {
-        "id": "DkTF0WeVkZnS"
+        "id": "Lqb5mRHEx8qn"
       }
     },
     {
@@ -2713,7 +2682,7 @@
         "Delivery delays are assumed to depend more on shipment mode, country, and vendor responsibility rather than product dosage or brand"
       ],
       "metadata": {
-        "id": "qcdZXgPSkcAa"
+        "id": "qLXETKkwx_zy"
       }
     },
     {
